Vistas Costos Logisticos

--- a/webapp/i18n/i18n.properties
+++ b/webapp/i18n/i18n.properties
@@ -12,3 +12,16 @@ dialogCloseButtonText=Ok
 
 # Invoice List
 invoiceListTitle=Invoices
+
+# Datos Generales
+Exportar=Exporar
+Importar=Importar
+Guardar=Guardar
+Copiar=Copiar
+Publicar=Publicar
+Administrar=Administrar
+Crear=Crear
+
+# Costos Logisticos
+CostosLogisticos=Costos Logisticos
+CrearLC=Crear Costo Logisticos
