--- a/webapp/i18n/i18n_es.properties
+++ b/webapp/i18n/i18n_es.properties
@@ -1,5 +1,5 @@
 # App Descriptor
-appTitle=Hello World
+appTitle=Simulador de Costos y Compras
 appDescription=A simple walkthrough app that explains the most important concepts of SAPUI5
 
 # Hello Panel
