--- a/webapp/i18n/i18n.properties
+++ b/webapp/i18n/i18n.properties
@@ -25,3 +25,9 @@ Crear=Crear
 # Costos Logisticos
 CostosLogisticos=Costos Logisticos
 CrearLC=Crear Costo Logisticos
+NuevoMaterial= Nuevo Material
+AgregarMaterial=Agregar Material
+Material=Material
+Centro=Centro
+Incoterms=Incoterm
+UM=Un. medida
