Costos Logisticos, Construcción tabla dinamica + almacenamiento

--- a/webapp/i18n/i18n.properties
+++ b/webapp/i18n/i18n.properties
@@ -21,6 +21,7 @@ Copiar=Copiar
 Publicar=Publicar
 Administrar=Administrar
 Crear=Crear
+NotificacionGuardarOk=Datos almacenados correctamente 
 
 # Costos Logisticos
 CostosLogisticos=Costos Logisticos
