Update periodos,centro,mantenimiento commodities,Idcommodities, delete UMD

--- a/webapp/i18n/i18n.properties
+++ b/webapp/i18n/i18n.properties
@@ -35,6 +35,9 @@ Centro=Centro
 Incoterms=Incoterm
 UM=Un. medida
 
+#~~~ Id commodities
+CrearCMID=Crear Commoditie
+
 #~~~ Perfiles ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
 #XTIT: Profiles view title
 profilesViewTitle=Perfiles
