--- a/webapp/i18n/i18n.properties
+++ b/webapp/i18n/i18n.properties
@@ -14,7 +14,7 @@ dialogCloseButtonText=Ok
 invoiceListTitle=Invoices
 
 #~~~ Datos Generales
-Exportar=Exporar
+Exportar=Expotar
 Importar=Importar
 Guardar=Guardar
 Copiar=Copiar
@@ -34,6 +34,9 @@ Material=Material
 Centro=Centro
 Incoterms=Incoterm
 UM=Un. medida
+
+#~~~ Categorias Logisticas ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
+CatLogistica=Categoria Logistica
 
 #~~~ Perfiles ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
 #XTIT: Profiles view title
