--- a/webapp/i18n/i18n.properties
+++ b/webapp/i18n/i18n.properties
@@ -23,7 +23,11 @@ Administrar=Administrar
 Crear=Crear
 New=Nuevo
 Add=Agregar
-NotificacionGuardarOk=Datos almacenados correctamente 
+NotificacionGuardarOk=Datos almacenados correctamente
+NotificacionModificacionOk=Datos actualizados correctamente
+technicalError=Error t\u00E9cnico
+errorTitleMessageBox=Error
+ErrorBorrado= Error de borrado
 
 #~~~ Costos Logisticos
 CostosLogisticos=Costos Logisticos
@@ -34,6 +38,7 @@ Material=Material
 Centro=Centro
 Incoterms=Incoterm
 UM=Un. medida
+MatPlant=Material - Centro
 
 #~~~ Categorias Logisticas ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
 CatLogistica=Categoria Logistica
