--- a/webapp/i18n/i18n.properties
+++ b/webapp/i18n/i18n.properties
@@ -39,6 +39,7 @@ Centro=Centro
 Incoterms=Incoterm
 UM=Un. medida
 MatPlant=Material - Centro
+CostEmpty=Costo total cero
 
 #~~~ Categorias Logisticas ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
 CatLogistica=Categoria Logistica
