--- a/webapp/i18n/i18n.properties
+++ b/webapp/i18n/i18n.properties
@@ -40,6 +40,7 @@ Incoterms=Incoterm
 UM=Un. medida
 MatPlant=Material - Centro
 CostEmpty=Costo total cero
+Descripcion=Descripción
 
 #~~~ Categorias Logisticas ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
 CatLogistica=Categoria Logistica
