--- a/webapp/i18n/i18n.properties
+++ b/webapp/i18n/i18n.properties
@@ -28,6 +28,7 @@ NotificacionModificacionOk=Datos actualizados correctamente
 technicalError=Error t\u00E9cnico
 errorTitleMessageBox=Error
 ErrorBorrado= Error de borrado
+Year=Año
 
 #~~~ Costos Logisticos
 CostosLogisticos=Costos Logisticos
@@ -35,10 +36,10 @@ CrearLC=Crear Costo Logisticos
 NuevoMaterial= Nuevo Material
 AgregarMaterial=Agregar Material
 Material=Material
-Centro=Centro
 Incoterms=Incoterm
 UM=Un. medida
-MatPlant=Material - Centro
+Matial=Material
+Plant=Centro
 CostEmpty=Costo total cero
 Descripcion=Descripción
 
