--- a/webapp/i18n/i18n.properties
+++ b/webapp/i18n/i18n.properties
@@ -23,6 +23,7 @@ Administrar=Administrar
 Crear=Crear
 New=Nuevo
 Add=Agregar
+Edit=Editar
 NotificacionGuardarOk=Datos almacenados correctamente
 NotificacionModificacionOk=Datos actualizados correctamente
 technicalError=Error t\u00E9cnico
@@ -65,4 +66,18 @@ profilesSubmoduleHeader=Submódulo
 #XTOL: Add Profile Tooltip
 profilesCreateNew=Crear nuevo perfil
 
-
+#~~~ Versiones fragment
+#XTIT: TItle fragment
+titleVersionFragment=Seleccione la versi\u00F3n
+#XFLD: Option
+optionLabelVersionFragment=Opci\u00F3n
+#XFLD: Select version
+selectVersionFragment=Seleccione la versi\u00F3n
+#XFLD: Id version
+idVersionFragment=ID versi\u00F3n
+#XFLD: Descirption version
+descriptionVersionFragment=Descripci\u00F3n versi\u00F3n
+#XFLD: Materials version
+materialsVersionFragment=Versi\u00F3n materiales
+#XFLD: Origin version
+originVersionFragment=Origen
