Ajuste vista versiones

--- a/webapp/i18n/i18n.properties
+++ b/webapp/i18n/i18n.properties
@@ -73,6 +73,8 @@ titleVersionFragment=Seleccione la versi\u00F3n
 optionLabelVersionFragment=Opci\u00F3n
 #XFLD: Select version
 selectVersionFragment=Seleccione la versi\u00F3n
+#XFLD: Name version
+nameVersionFragment=Nombre versi\u00F3n
 #XFLD: Id version
 idVersionFragment=ID versi\u00F3n
 #XFLD: Descirption version
