--- a/webapp/i18n/i18n.properties
+++ b/webapp/i18n/i18n.properties
@@ -73,6 +73,8 @@ titleVersionFragment=Seleccione la versi\u00F3n
 optionLabelVersionFragment=Opci\u00F3n
 #XFLD: Select version
 selectVersionFragment=Seleccione la versi\u00F3n
+#XFLD: Country version
+countryVersionFragment=Pa\u00EDs
 #XFLD: Name version
 nameVersionFragment=Nombre versi\u00F3n
 #XFLD: Id version
@@ -83,3 +85,8 @@ descriptionVersionFragment=Descripci\u00F3n versi\u00F3n
 materialsVersionFragment=Versi\u00F3n materiales
 #XFLD: Origin version
 originVersionFragment=Origen
+#XMSG: No versions found
+notVersionsFoundVersionFragment=No se han encontrado versiones
+#XTIT: Select a version
+selectTitleVersionFragment=Seleccione una versi\u00F3n
+
