Año en versiones

--- a/webapp/i18n/i18n.properties
+++ b/webapp/i18n/i18n.properties
@@ -89,4 +89,7 @@ originVersionFragment=Origen
 notVersionsFoundVersionFragment=No se han encontrado versiones
 #XTIT: Select a version
 selectTitleVersionFragment=Seleccione una versi\u00F3n
+#XFLD: Year version
+yearVersionFragment=Año
+
 
