--- a/webapp/i18n/i18n.properties
+++ b/webapp/i18n/i18n.properties
@@ -26,9 +26,6 @@ Add=Agregar
 Edit=Editar
 NotificacionGuardarOk=Datos almacenados correctamente
 NotificacionModificacionOk=Datos actualizados correctamente
-technicalError=Error t\u00E9cnico
-errorTitleMessageBox=Error
-ErrorBorrado= Error de borrado
 Year=Año
 
 #~~~ Costos Logisticos
@@ -92,4 +89,21 @@ selectTitleVersionFragment=Seleccione una versi\u00F3n
 #XFLD: Year version
 yearVersionFragment=Año
 
+#XMSG: Miss version for edit
+errMissVersionForEditVersionFragment=Debe seleccionar la versión.
+#XMSG: Miss version name
+errMissNameVersionFragment=Debe ingresar el nombre.
+#XMSG: Miss version description
+errMissDescriptionVersionFragment=Debe ingresar la descripción.
+#XMSG: Miss version material version
+errMissMaterialVersionVersionFragment=Debe seleccionar la version del material.
 
+#~~~ Errores ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
+#XMSG: Error fields mandatory
+errMissSummary=Debe completar todos los campos requeridos:
+#XTIT: Error message title
+errorTitleMessageBox=Error
+#YMSE: Error message
+technicalError=Se ha presentado un error t\u00E9cnico. Vuelva a intentarlo o consulte con el administrador del sistema.
+#YMSE: Error message
+ErrorBorrado= Error de borrado
