Actualización versiones y Formatter

--- a/webapp/i18n/i18n.properties
+++ b/webapp/i18n/i18n.properties
@@ -27,6 +27,8 @@ Edit=Editar
 NotificacionGuardarOk=Datos almacenados correctamente
 NotificacionModificacionOk=Datos actualizados correctamente
 Year=Año
+#XTXT: Pattern short date
+patternDateBackend=yyyyMMdd
 
 #~~~ Costos Logisticos
 CostosLogisticos=Costos Logisticos
