--- a/webapp/i18n/i18n.properties
+++ b/webapp/i18n/i18n.properties
@@ -29,6 +29,11 @@ NotificacionModificacionOk=Datos actualizados correctamente
 Year=Año
 #XTXT: Pattern short date
 patternDateBackend=yyyyMMdd
+#XTXT: Real
+Real=Real
+#XTXT: Plan
+Plan=Plan
+
 
 #~~~ Costos Logisticos
 CostosLogisticos=Costos Logisticos
@@ -80,8 +85,12 @@ nameVersionFragment=Nombre versi\u00F3n
 idVersionFragment=ID versi\u00F3n
 #XFLD: Descirption version
 descriptionVersionFragment=Descripci\u00F3n versi\u00F3n
+#XFLD: Exchange rate version
+exchangeRateVersionFragment=Tipo cambio
 #XFLD: Materials version
 materialsVersionFragment=Versi\u00F3n materiales
+#XFLD: Commoditie version
+commoditieVersionFragment=Versi\u00F3n commoditie
 #XFLD: Origin version
 originVersionFragment=Origen
 #XMSG: No versions found
@@ -90,6 +99,10 @@ notVersionsFoundVersionFragment=No se han encontrado versiones
 selectTitleVersionFragment=Seleccione una versi\u00F3n
 #XFLD: Year version
 yearVersionFragment=Año
+#XMSG: Year mismath
+mismathYearVersionFragment=La versi\u00F3n seleccionada es posible que no contenga los materiales del  a\u00F1o actual, desea continuar?
+
+
 
 #XMSG: Miss version for edit
 errMissVersionForEditVersionFragment=Debe seleccionar la versión.
