--- a/webapp/i18n/i18n.properties
+++ b/webapp/i18n/i18n.properties
@@ -113,6 +113,26 @@ errMissDescriptionVersionFragment=Debe ingresar la descripción.
 #XMSG: Miss version material version
 errMissMaterialVersionVersionFragment=Debe seleccionar la version del material.
 
+#~~~ Escenarios ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
+#XTIT: scenarioTitleView
+titleScenarioView=Matriz Escenarios
+#XTIT: scenarioTitleView
+titleTableScenarioView=Escenarios
+#XTIT: scenarioTitleView
+titleTableCountScenarioView=Escenarios ({0})
+#XCOL: Scenario title column
+scenarioNameScenarioView=Escenario
+#XCOL: Scenario type title column
+scenarioTypeScenarioView=Tipo de Escenario
+#XMSG: No scenarios found
+scenarioNoDataFound=No se encontraron escenarios
+#XBUT: Create scenario
+createScenario=Crear nuevo escenario
+#XCOL: Scenario module title column
+moduleScenarioViewHeader=Módulo
+
+
+
 #~~~ Errores ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
 #XMSG: Error fields mandatory
 errMissSummary=Debe completar todos los campos requeridos:
