ajustes Versiones y titulo dinamico

--- a/webapp/i18n/i18n.properties
+++ b/webapp/i18n/i18n.properties
@@ -34,6 +34,8 @@ Real=Real
 #XTXT: Plan
 Plan=Plan
 
+#~~~ Commodities
+CommoditiesTitle=Commodities
 
 #~~~ Costos Logisticos
 CostosLogisticos=Costos Logisticos
