--- a/webapp/i18n/i18n.properties
+++ b/webapp/i18n/i18n.properties
@@ -132,8 +132,17 @@ scenarioNoDataFound=No se encontraron escenarios
 createScenario=Crear nuevo escenario
 #XCOL: Scenario module title column
 moduleScenarioViewHeader=Módulo
+#XTIT: Create escenario view
+titleCreateScenarioView=Crear escenario
+#XTIT: Modify escenario view
+titleEditScenarioView=Modificar escenario
 
-
+#XMSG: Miss scenario name
+errMissNameScenarioView=Debe ingresar el nombre.
+#XMSG: Miss scenario type
+errMissTypeScenarioView=Debe seleccionar el tipo.
+#XMSG: Miss month version
+errMissMonthVersionScenarioView=Faltan meses por ingresar.
 
 #~~~ Errores ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
 #XMSG: Error fields mandatory
