Ajustes varios, Commodities

--- a/webapp/i18n/i18n.properties
+++ b/webapp/i18n/i18n.properties
@@ -36,6 +36,7 @@ Plan=Plan
 
 #~~~ Commodities
 CommoditiesTitle=Commodities
+Norowsforupdate=No existen filas para ser actualizadas
 
 #~~~ Costos Logisticos
 CostosLogisticos=Costos Logisticos
