--- a/webapp/i18n/i18n.properties
+++ b/webapp/i18n/i18n.properties
@@ -14,7 +14,7 @@ dialogCloseButtonText=Ok
 invoiceListTitle=Invoices
 
 #~~~ Datos Generales
-Exportar=Expotar
+Exportar=Exportar
 Importar=Importar
 Guardar=Guardar
 Copiar=Copiar
