Ajuste y estabilización escenarios

--- a/webapp/i18n/i18n.properties
+++ b/webapp/i18n/i18n.properties
@@ -136,6 +136,17 @@ moduleScenarioViewHeader=Módulo
 titleCreateScenarioView=Crear escenario
 #XTIT: Modify escenario view
 titleEditScenarioView=Modificar escenario
+#XTIT: View escenario view
+titleViewScenarioView=Visualizar escenario - {0}
+#XCOL: Anno  scenario view header
+annoScenarioView=Periodo tipo de cambio
+#XCOL: Anno  scenario view header
+descriptionScenarioView=Descripci\u00F3n
+#XCOL: ID  scenario view header
+idScenarioView=Id. Escenario
+#XFLD: Exchange rate scenario view
+exchangeRateScenario=Tipo de cambio
+
 
 #XMSG: Miss scenario name
 errMissNameScenarioView=Debe ingresar el nombre.
@@ -143,6 +154,8 @@ errMissNameScenarioView=Debe ingresar el nombre.
 errMissTypeScenarioView=Debe seleccionar el tipo.
 #XMSG: Miss month version
 errMissMonthVersionScenarioView=Faltan meses por ingresar.
+#XMSG: Miss Year scenario
+errMissYearScenarioView=Debe seleccionar el a\u00F1o.
 
 #~~~ Errores ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
 #XMSG: Error fields mandatory
