Commodities: Borrar, modificar, Crear version defaul

--- a/webapp/i18n/i18n.properties
+++ b/webapp/i18n/i18n.properties
@@ -20,6 +20,7 @@ Guardar=Guardar
 Copiar=Copiar
 Publicar=Publicar
 Administrar=Administrar
+Cancelar=Cancelar
 Crear=Crear
 New=Nuevo
 Add=Agregar
@@ -49,6 +50,7 @@ Matial=Material
 Plant=Centro
 CostEmpty=Costo total cero
 Descripcion=Descripción
+DuplicateMat=Material duplicado
 
 #~~~ Categorias Logisticas ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
 CatLogistica=Categoria Logistica
